--- a/index.html
+++ b/index.html
@@ -140,7 +140,59 @@
         </ul>
       </section>
 
-      <section class="about" id="about"></section>
+      <section class="about" id="about">
+        <p class="about_narrative">tradition and love</p>
+        <div class="about_title-container">
+          <h1 class="about_title">how it’s made?</h1>
+        </div>
+        <ul class="about_description">
+          <li class="about_description-item">
+            Ice is a place where you will become not only a little happier, but
+            also healthier. Health is the main value for us, and we follow it
+            when creating our handmade desserts.
+          </li>
+          <li class="about_description-item">
+            We use traditional recipes and 100% natural ingredients. Our
+            products are so natural that they can be given to children from the
+            age of three years. Sweets lovers can expect 55 types of ice cream,
+            15 types of coffee and 23 milkshakes.
+          </li>
+          <li class="about_description-item">
+            This is enough to choose ice cream and coffee for any mood!
+          </li>
+        </ul>
+
+        <button type="button" class="about_button">Read more ></button>
+        <ul class="about_list">
+          <li class="about_list-item">
+            <div class="about_list-picture">
+            <svg  width="36" height="36">
+              <use href="./images/sprite.svg#cow"></use>
+            </svg>
+          </div>
+            <h2 class="about_list-item_title">721</h2>
+            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          </li>
+          <li class="about_list-item">
+            <div class="about_list-picture">
+            <svg width="36" height="36">
+              <use href="./images/sprite.svg#weight"></use>
+            </svg>
+          </div>
+            <h2 class="about_list-item_title">16kg</h2>
+            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          </li>
+          <li class="about_list-item">
+            <div class="about_list-picture">
+            <svg width="36" height="36">
+              <use href="./images/sprite.svg#ice-cream"></use>
+            </svg>
+          </div>
+            <h2 class="about_list-item_title">84</h2>
+            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          </li>
+        </ul>
+      </section>
 
       <section class="advantages"></section>
 
