--- a/index.html
+++ b/index.html
@@ -161,40 +161,26 @@
             This is enough to choose ice cream and coffee for any mood!
           </li>
         </ul>
-
         <button type="button" class="about_button">Read more ></button>
-        <ul class="about_list">
-          <li class="about_list-item">
-            <div class="about_list-picture">
-            <svg  width="36" height="36">
-              <use href="./images/sprite.svg#cow"></use>
-            </svg>
-          </div>
-            <h2 class="about_list-item_title">721</h2>
-            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </section>
+
+      <section class="advantages container">
+        <h1 class="advantages_title visually-hidden">Advantages</h1>
+        <ul class="advantages_list">
+          <li class="advantages_list-item">
+            <h2 class="advantages_list-item_title">721</h2>
+            <p class="advantages_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
           </li>
-          <li class="about_list-item">
-            <div class="about_list-picture">
-            <svg width="36" height="36">
-              <use href="./images/sprite.svg#weight"></use>
-            </svg>
-          </div>
-            <h2 class="about_list-item_title">16kg</h2>
-            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <li class="advantages_list-item">
+            <h2 class="advantages_list-item_title">16kg</h2>
+            <p class="advantages_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
           </li>
-          <li class="about_list-item">
-            <div class="about_list-picture">
-            <svg width="36" height="36">
-              <use href="./images/sprite.svg#ice-cream"></use>
-            </svg>
-          </div>
-            <h2 class="about_list-item_title">84</h2>
-            <p class="about_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <li class="advantages_list-item">
+            <h2 class="advantages_list-item_title">84</h2>
+            <p class="advantages_list-item_description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
           </li>
         </ul>
       </section>
-
-      <section class="advantages"></section>
 
       <section class="gallery"></section>
 
