--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <header class="header">
       <nav class="mobile-navigation">
+        <div class="mobile-navigation_header">
         <img class="header_logo" src="./images/Logo.png" alt="logo" />
         <button
           type="button"
@@ -34,9 +35,11 @@
             <use href="./images/sprite.svg#icon-close" class="close-icon"></use>
           </svg>
         </button>
+      </div>
 
         <div class="mobile-menu_container" data-menu>
           <div class="fixed_container">
+            <img class="header_logo" src="./images/Logo.png" alt="logo" />
             <ul class="mobile-menu_list">
               <li class="mobile-menu_link">
                 <a href="./index.html">Home</a>
@@ -182,7 +185,26 @@
         </ul>
       </section>
 
-      <section class="gallery"></section>
+      <section class="gallery container">
+        <h1 class="gallery_title visually-hidden">Gallery</h1>
+        <div class="gallery_container">
+        <img src="./images/gallery_desktop_1.png"
+        srcset="./images/gallery_desktop_1.png 1x, ./images/gallery_desktop_1@2x.png 2x"
+        class="gallery_image"
+        alt="gallery image of products"
+        />
+        <!-- <img src="./images/gallery_desktop_2.png" 
+        srcset="./images/gallery_desktop_2.png 1x, ./images/gallery_desktop_2@2x.png 2x"
+        class="gallery_image"
+        alt="gallery image of products"
+        />
+        <img src="./images/gallery_desktop_3.png"
+        srcset="./images/gallery_desktop_3.png 1x, ./images/gallery_desktop_3@2x.png 2x"
+        class="gallery_image"
+        alt="gallery image of products"
+        /> -->
+      </div>
+      </section>
 
       <section class="review"></section>
 
