--- a/index.html
+++ b/index.html
@@ -206,9 +206,77 @@
       </div>
       </section>
 
-      <section class="review"></section>
+      <section class="reviews">
+        <h1 class="reviews_title visually-hidden">Customer Reviews</h1>
+        <div class="reviews_slider">
+          <sviper-container pagination="true">
+            <sviper-slide>Slide 1</sviper-slide>
+            <sviper-slide>Slide 2</sviper-slide>
+            <sviper-slide>Slide 3</sviper-slide>
+          </sviper-container>
+        </div>
 
-      <section class="contacts" id="contacts"></section>
+
+      </section>
+
+      <section class="contacts container" id="contacts">
+        <h1 class="contacts_title visually-hidden">Contacts</h1>
+        <ul class="contacts_list">
+          <li class="contacts_list-item">
+            <div class="contacts_list-item_container">
+              <h2 class="contacts_list-item_title">cafe</h2>
+              <p class="contacts_list-item_location">Chicago</p>
+              <address class="contacts_list-item_address">10340 Ridgeland Ave, <br> Chicago Ridge, IL 60415, USA</address>
+              <div class="contacts_list-item_schedule">
+              <p class="contacts_list-item_week">Monday - Friday</p>
+              <p class="contacts_list-item_time">06:00 AM - 10:00 PM</p>
+              <p class="contacts_list-item_week">Saturday - Sunday</p>
+              <p class="contacts_list-item_time">08:00 AM - 16:00 PM</p>
+            </div>
+
+              <a href="tel:+61(0)383766284" class="contacts_list-item_contacts">+61(0) 383 766 284</a>
+              <a href="mailto:noreply@envato.com" class="contacts_list-item_contacts">noreply@envato.com</a>
+            </div>
+          </li>
+          <li class="contacts_list-item">
+            <div class="contacts_list-item_container">
+              <h2 class="contacts_list-item_title">foodtruck</h2>
+              <p class="contacts_list-item_location">Los Angeles</p>
+              <address class="contacts_list-item_address">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</address>
+
+              <div class="contacts_list-item_schedule">
+              <p class="contacts_list-item_week">Monday - Friday</p>
+              <p class="contacts_list-item_time">06:00 AM - 10:00 PM</p>
+              <p class="contacts_list-item_week">Saturday - Sunday</p>
+              <p class="contacts_list-item_time">08:00 AM - 16:00 PM</p>
+            </div>
+
+              <a href="tel:+61(0)383766284" class="contacts_list-item_contacts">+61(0) 383 766 284</a>
+              <a href="mailto:noreply@envato.com" class="contacts_list-item_contacts">noreply@envato.com</a>
+            </div>
+          </li>
+          <li class="contacts_list-item">
+            <div class="contacts_list-item_container">
+              <h2 class="contacts_list-item_title">cafe</h2>
+              <p class="contacts_list-item_location">New York</p>
+              <address class="contacts_list-item_address">726 Sterling Pl, Brooklyn, NY 11222, USA</address>
+
+              <div class="contacts_list-item_schedule">
+              <p class="contacts_list-item_week">Monday - Friday</p>
+              <p class="contacts_list-item_time">06:00 AM - 10:00 PM</p>
+              <p class="contacts_list-item_week">Saturday - Sunday</p>
+              <p class="contacts_list-item_time">08:00 AM - 16:00 PM</p>
+            </div>
+
+              <a href="tel:+61(0)383766284" class="contacts_list-item_contacts">+61(0) 383 766 284</a>
+              <a href="mailto:noreply@envato.com" class="contacts_list-item_contacts">noreply@envato.com</a>
+            </div>
+          </li>
+        </ul>
+
+        <button type="button" class="contacts_button-locations">Our locations ></button>
+        <button type="button" class="contacts_button-franchise">Franchise ></button>
+      </section>
     </main>
 
     <footer></footer>
@@ -216,5 +284,6 @@
     <!-- <script src="./js/form.js"></script> -->
     <script src="./js/menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   </body>
 </html>
