--- a/index.html
+++ b/index.html
@@ -279,8 +279,40 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer container">
+      <p class="footer_title">homemade ice cream made</p>
+      <p class="footer_title2">with <br>passion</p>
 
+      <ul class="footer_network-list">
+        <li class="footer_network-list_item">
+          <a class="footer_network-list_item_link" href="https://github.com/" target="_blank" aria-label="github link">
+            <svg class="footer_network-list_item_link_image" width="20" height="20">
+              <use href="./images/sprite.svg#icon-github"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer_network-list_item">
+          <a class="footer_network-list_item_link" href="https://telegram.org/" target="_blank" aria-label="telegram link">
+            <svg class="footer_network-list_item_link_image" width="20" height="20">
+              <use href="./images/sprite.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer_network-list_item">
+          <a class="footer_network-list_item_link" href="https://www.facebook.com/" target="_blank" aria-label="facebook link">
+            <svg class="footer_network-list_item_link_image" width="20" height="20">
+              <use  href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p class="footer_contact-ph">Feel free to contact <a href="tel:+61(0)383766284">+61 (0) 383 766 284</a></p>
+    </footer>
+
+    <footer class="back_footer container">
+      <p>© 2022 - IceCream.</p>
+      <p>All Rights Reserved.</p>
+    </footer>
     <!-- <script src="./js/form.js"></script> -->
     <script src="./js/menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
